crates/workspace/src/snapshots/moon_workspace__dep_graph__tests__run_target_if_touched__skips_if_untouched_project.snap
---
source: crates/workspace/src/dep_graph.rs
assertion_line: 558
expression: graph.to_dot()

---
digraph {
    0 [ label = "\"SetupToolchain\"" ]
    1 [ label = "\"InstallNodeDeps\"" ]
    2 [ label = "\"SyncProject(inputA)\"" ]
    3 [ label = "\"RunTarget(inputA:a)\"" ]
    1 -> 0 [ ]
    2 -> 0 [ ]
    3 -> 1 [ ]
    3 -> 2 [ ]
}

