crates/workspace/src/snapshots/moon_workspace__dep_graph__tests__run_target_if_touched__skips_if_untouched_task.snap
---
source: crates/workspace/src/dep_graph.rs
assertion_line: 582
expression: graph.to_dot()

---
digraph {
    0 [ label = "\"SetupToolchain\"" ]
    1 [ label = "\"InstallNodeDeps\"" ]
    2 [ label = "\"SyncProject(inputB)\"" ]
    3 [ label = "\"RunTarget(inputB:b2)\"" ]
    4 [ label = "\"SyncProject(inputC)\"" ]
    5 [ label = "\"RunTarget(inputC:c)\"" ]
    1 -> 0 [ ]
    2 -> 0 [ ]
    3 -> 1 [ ]
    3 -> 2 [ ]
    4 -> 0 [ ]
    5 -> 1 [ ]
    5 -> 4 [ ]
}

